// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-input-label should render with content in the primary slot 1`] = `
<modus-wc-input-label class="modus-wc-input-label-host">
  <!---->
  <label class="modus-wc-input-label modus-wc-input-label-size-md">
    <span>
      Slot content
    </span>
  </label>
</modus-wc-input-label>
`;

exports[`modus-wc-input-label should render with custom props 1`] = `
<modus-wc-input-label class="modus-wc-input-label-host" custom-class="test-class" for-id="input-id" label-text="Custom label" required="true" size="lg" sub-label-text="Sublabel text">
  <!---->
  <label class="modus-wc-input-label modus-wc-input-label-size-lg test-class" for="input-id">
    Custom label
    <span aria-hidden="true" class="required-indicator">
      *
    </span>
    <div class="modus-wc-input-label-sublabel">
      Sublabel text
    </div>
  </label>
</modus-wc-input-label>
`;

exports[`modus-wc-input-label should render with default props 1`] = `
<modus-wc-input-label class="modus-wc-input-label-host">
  <!---->
  <label class="modus-wc-input-label modus-wc-input-label-size-md"></label>
</modus-wc-input-label>
`;
